test/log/shift/vcsl_i_u16_m.txt
vcsl_i_u16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vcsl_i_u16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vcsl_i_u16_m.c:30:6: warning: no previous prototype for 'vcsl_i_u16_m_golden' [-Wmissing-prototypes]
   30 | void vcsl_i_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint32_t imm,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vcsl_i_u16_m.c: In function 'vcsl_i_u16_m_golden':
vcsl_i_u16_m.c:30:51: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vcsl_i_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint32_t imm,uint16_t *exp_result) {
      |                                         ~~~~~~~~~~^~~~~~~
vcsl_i_u16_m.c:30:69: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vcsl_i_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint32_t imm,uint16_t *exp_result) {
      |                                                           ~~~~~~~~~~^
vcsl_i_u16_m.c: In function 'main':
vcsl_i_u16_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vcsl_i_u16_m.c:61:40: error: incompatible type for argument 3 of 'vcsl_i_u16_m'
   61 |     result = vcsl_i_u16_m(mask,maskoff,a,0);
      |                                        ^
      |                                        |
      |                                        uint16x32_t
In file included from vcsl_i_u16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1688:1: note: expected 'uint32_t' {aka 'const long unsigned int'} but argument is of type 'uint16x32_t'
 1688 | __RUGRATS_I_OP (csl, u, uint, uint, 16, 32, 32)
      | ^~~~~~~~~~~~~~
vcsl_i_u16_m.c:61:14: error: too many arguments to function 'vcsl_i_u16_m'
   61 |     result = vcsl_i_u16_m(mask,maskoff,a,0);
      |              ^~~~~~~~~~~~
In file included from vcsl_i_u16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1688:1: note: declared here
 1688 | __RUGRATS_I_OP (csl, u, uint, uint, 16, 32, 32)
      | ^~~~~~~~~~~~~~
vcsl_i_u16_m.c:43:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   43 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcsl_i_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vcsl_i_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vcsl_i_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcsl_i_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed